--- a/credentials.yml
+++ b/credentials.yml
@@ -4,4 +4,4 @@ default:
   aws_secret_access_key: Rm29CHLQCeaT6V/Rsw3UFWW1/UWQ0lhsWBa3bdca
   output: json
   region: us-east-2
-  database_password: ioG&i73623ASDG
+  postgres_connection_string: postgres://adm:1dfasd2323faf@teste.server.org:5432/prd
